--- a/index.html
+++ b/index.html
@@ -4,25 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="reset.css">
-    <script src="main.js" defer></script>
     <title>Etch-a-Sketch</title>
 </head>
 <body>
     <div class="flex-container">
-        <div class="title">Sketch Pad</div>
+        <div class="title" style="font-weight: bold; font-size: larger;">Sketch Pad</div>
+        <div class="mode">Mode: Coloring</div>
+        <div class="instructions" style="font-size: small;">Click to stop/continue coloring!</div>
         <div class="content">
             <div class="board"></div>
+            <!--the 'onclick' changes color of the squares according to user choice-->
             <div class="button">
-                <button>Black</button>
-                <button>White</button>
-                <button>Random</button>
-                <button>Reset</button>
+                <button onclick="changeColor('black')">Black</button>
+                <button onclick="changeColor('white')">Eraser</button>
+                <button onclick="changeColor('gray')">Gray</button>
+                <button onclick="changeColor('random')">Random</button>
+                <button onclick="resetBoard()">Reset</button>
             </div>
-            <input type="text" placeholder="Size of Board" value="16">
+            <!--the 'onchange' changes size of squares according to user value input-->
+            <input 
+                type="text" 
+                placeholder="Size of Board" 
+                value="16"
+                onchange="changeSize(this.value)">
             <button>Set Size</button>
         </div>
+        <div class="error">
+            Input must be between 2 and 100.
+        </div>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
