Edit button sizing

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="flex-container">
         <div class="title">Sketch Pad</div>
         <div class="mode">Mode: Coloring</div>
-        <div class="instructions" style="color: rgb(140, 139, 139); font-size: 15px; margin: 10px 0 20px 0;">Click to stop/continue coloring!</div>
+        <div class="instructions" style="color: rgb(140, 139, 139); font-size: 15px; margin: 10px 0 20px 0;">Click to STOP/RESUME coloring!</div>
         <div class="content">
             <div class="board"></div>
             <!--the 'onclick' changes color of the squares according to user choice-->
@@ -27,7 +27,7 @@
             <input 
                 type="text" 
                 placeholder="Size of Squares" 
-                value="16"
+                value="30"
                 style="margin-top: 10px;"
                 onchange="changeSize(this.value)">
             <button>Set Size</button>
