Add icon logo to title bar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="reset.css">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/8039/8039207.png" type="image/icon type"> 
     <title>Etch-a-Sketch</title>
 </head>
 <body>
